1. Изменен внешний вид интерфейса 2. Проверка корректности ввода настроек (максимальные значения и нецифровые символы) 3. При экспорте добавлен диалог, сообщающий о сохраненном файле 4. В экспортируемые данные добавлено время в человекочитаемом формате 5. Изменены настройки по умолчанию (включены все таски и лимит 100/100/10/10) 6. Введен запрет поворота экрана

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="RadioBt_2">Показывать</string>
     <string name="SaveButton">Сохранить</string>
     <string name="repeat">Повторить</string>
+    <string name="export_dialog">Результаты сохранены в файл:</string>
+    <string name="export_dialog_ok">Закрыть</string>
 
 </resources>
